--- a/src/html/searchresults.html
+++ b/src/html/searchresults.html
@@ -70,86 +70,86 @@
                 <div class="check-list">
                     <span class="list-title">自定义病人队列统计表</span>
                     <ul class="list-items">
-                        <li style="display: none" class="col-check unchecked">
-                            <span><i class="checkicon"></i>医嘱</span>
-                        </li>
-                        <li class="col-check unchecked">
-                            <span><i class="checkicon"></i>医嘱</span>
-                        </li>
-                        <li class="col-check unchecked">
-                            <span><i class="checkicon"></i>体温单</span>
-                        </li>
-                        <li class="col-check unchecked">
-                            <span><i class="checkicon"></i>检查</span>
-                        </li>
-                        <li class="col-check unchecked">
-                            <span><i class="checkicon"></i>化验</span>
-                        </li>
+                        <!--<li style="display: none" class="col-check unchecked">-->
+                            <!--<span><i class="checkicon"></i>医嘱</span>-->
+                        <!--</li>-->
+                        <!--<li class="col-check unchecked">-->
+                            <!--<span><i class="checkicon"></i>医嘱</span>-->
+                        <!--</li>-->
+                        <!--<li class="col-check unchecked">-->
+                            <!--<span><i class="checkicon"></i>体温单</span>-->
+                        <!--</li>-->
+                        <!--<li class="col-check unchecked">-->
+                            <!--<span><i class="checkicon"></i>检查</span>-->
+                        <!--</li>-->
+                        <!--<li class="col-check unchecked">-->
+                            <!--<span><i class="checkicon"></i>化验</span>-->
+                        <!--</li>-->
                     </ul>
                 </div>
                 <ul class="tab-nav">
-                    <li class="disblock active">病人信息</li>
-                    <li>医嘱</li>
-                    <li>体温单</li>
-                    <li>检查</li>
-                    <li>化验</li>
+                    <!--<li class="disblock active">病人信息</li>-->
+                    <!--<li>医嘱</li>-->
+                    <!--<li>体温单</li>-->
+                    <!--<li>检查</li>-->
+                    <!--<li>化验</li>-->
                 </ul>
                 <div class="tab-con">
-                    <div class="con-item active">
-                        <div class="con-tab">
-                            <span class="choose">筛选</span>
-                            <ul class="con-tab-items">
-                                <li class="con-tab-item unchecked">
-                                    <span><i class="checkicon"></i>病人ID</span>
-                                </li>
-                                <li class="con-tab-item unchecked">
-                                <span><i class="checkicon"></i>姓名</span>
-                            </li>
-                                <li class="con-tab-item unchecked">
-                                    <span><i class="checkicon"></i>性别</span>
-                                </li>
-                                <li class="con-tab-item unchecked">
-                                    <span><i class="checkicon"></i>就诊ID</span>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="con-table">
-                            <div class="table-layer">
-                                <table border>
-                                    <thead>
-                                    <tr>
-                                        <th>呵呵</th>
-                                        <th>呵呵</th>
-                                        <th>呵呵</th>
-                                        <th>呵呵</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr>
-                                        <td>哈哈</td>
-                                        <td>哈哈</td>
-                                        <td>哈哈</td>
-                                        <td>哈哈</td>
-                                    </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                            <div class="tab-footer">
-                                <div style="float: right">
-                                    <span @click="goPrev" class="prev">上一页</span>
-                                    <span @click="goNext" class="next">下一页</span>
-                                    <span>跳转到
-            <input id="gopage" type="text" style="outline:none;width: 18px;height: 18px;text-align: center;margin-left: 10px;position: relative;top:-1px;font-size: 10px">
-          </span>
-                                    <span @click="goPage" class="go">确定</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="con-item" id="yizhu">医嘱内容</div>
-                    <div class="con-item" id="tiwendan">体温单内容</div>
-                    <div class="con-item" id="jiancha">检查内容</div>
-                    <div class="con-item" id="neirong">化验内容</div>
+                    <!--<div class="con-item active">-->
+                        <!--<div class="con-tab">-->
+                            <!--<span class="choose">筛选</span>-->
+                            <!--<ul class="con-tab-items">-->
+                                <!--<li class="con-tab-item unchecked">-->
+                                    <!--<span><i class="checkicon"></i>病人ID</span>-->
+                                <!--</li>-->
+                                <!--<li class="con-tab-item unchecked">-->
+                                <!--<span><i class="checkicon"></i>姓名</span>-->
+                            <!--</li>-->
+                                <!--<li class="con-tab-item unchecked">-->
+                                    <!--<span><i class="checkicon"></i>性别</span>-->
+                                <!--</li>-->
+                                <!--<li class="con-tab-item unchecked">-->
+                                    <!--<span><i class="checkicon"></i>就诊ID</span>-->
+                                <!--</li>-->
+                            <!--</ul>-->
+                        <!--</div>-->
+                        <!--<div class="con-table">-->
+                            <!--<div class="table-layer">-->
+                                <!--<table border>-->
+                                    <!--<thead>-->
+                                    <!--<tr>-->
+                                        <!--<th>呵呵</th>-->
+                                        <!--<th>呵呵</th>-->
+                                        <!--<th>呵呵</th>-->
+                                        <!--<th>呵呵</th>-->
+                                    <!--</tr>-->
+                                    <!--</thead>-->
+                                    <!--<tbody>-->
+                                    <!--<tr>-->
+                                        <!--<td>哈哈</td>-->
+                                        <!--<td>哈哈</td>-->
+                                        <!--<td>哈哈</td>-->
+                                        <!--<td>哈哈</td>-->
+                                    <!--</tr>-->
+                                    <!--</tbody>-->
+                                <!--</table>-->
+                            <!--</div>-->
+                            <!--<div class="tab-footer">-->
+                                <!--<div style="float: right">-->
+                                    <!--<span @click="goPrev" class="prev">上一页</span>-->
+                                    <!--<span @click="goNext" class="next">下一页</span>-->
+                                    <!--<span>跳转到-->
+            <!--<input id="gopage" type="text" style="outline:none;width: 18px;height: 18px;text-align: center;margin-left: 10px;position: relative;top:-1px;font-size: 10px">-->
+          <!--</span>-->
+                                    <!--<span @click="goPage" class="go">确定</span>-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="con-item" id="yizhu">医嘱内容</div>-->
+                    <!--<div class="con-item" id="tiwendan">体温单内容</div>-->
+                    <!--<div class="con-item" id="jiancha">检查内容</div>-->
+                    <!--<div class="con-item" id="neirong">化验内容</div>-->
                 </div>
                 <!--<div class="results-header">-->
                     <!--<div class="results-summary">-->
